--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: docker
     dockerfilePath: ./Dockerfile
     buildCommand: composer install
-    startCommand: php-fpm
+    startCommand: /bin/bash -c "service php8.1-fpm start && nginx -g 'daemon off;'"
     envVars:
       - key: APP_ENV
         value: local
