--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,29 @@
-server {
-    listen 8000;
-    server_name localhost;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
 
-    root /var/www/public;
-    index index.php index.html index.htm;
+events {
+    worker_connections 768;
+}
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php/php8.1-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-    }
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    location ~ /\.ht {
-        deny all;
-    }
+    ssl_prefer_server_ciphers on;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    gzip on;
+    gzip_disable "msie6";
+
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
